# Snake-Game

./: Snake.cabal  fork.hs  wait.hs
app/: Data.hs  Init.hs  Main.hs  Render.hs  Util.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
