cabal-version:      2.4
name:               Snake
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Harun Mwangi
maintainer:         harunm28@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Snake
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Data, Init, Render, Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, ansi-terminal, mtl, random
    hs-source-dirs:   app
    default-language: Haskell2010
